# benches_rkyv_bincode_nightly

./: Cargo.toml  README.md  rust-toolchain
benches/: bench_serialization.rs
src/: lib.rs  model.rs
